# OpenGL_engine

./: CMakeLists.txt  README.md  camera.hpp  main.cpp  mesh.hpp  model.hpp  opengl_support.cpp  opengl_support.hpp  shader.hpp  stb_image.h
resources/shaders/: lamp.glsl  model_loading.glsl
